package pro.piechowski.highschoolstory.`object`

import com.github.quillraven.fleks.Entity

interface GameObject

interface EntityGameObject {
    val entity: Entity
}
